setup post swagger
