# api/modules/auth/dto/userDto.go
@@ -2,8 +2,8 @@ package dto
 
 // UserDto model
 type UserDto struct {
-	Email   	string  `gorm:"not null;unique_index:idx_email"`
-	FirstName   string	`gorm:"size:50;not null" json:"firstname"`
-	LastName    string	`gorm:"size:50;not null" json:"lastName"`
-	Password  	string  `gorm:"size:100;not null;" json:"password"`
+	Email   	string  `valid:"Email"`
+	FirstName   string	`form:"firstname" valid:"Required;MaxSize(25)"`
+	LastName    string	`form:"lastName" valid:"Required;MaxSize(25)"`
+	Password  	string  `form:"password" valid:"Required;MaxSize(12)"`
 }
